data/derived/comb/progs/unify/prog8732.ml.out
Characters 86-89:
  | h::t -> matchHeads (listList(w));;
                                ^^^
Error: This expression has type string but an expression was expected of type
         'a list list
